Changelog
=========

1.1-dev - (unreleased)
----------------------

1.0 - (2014-10-15)
------------------
- Initial release
