@@ -1,4 +1,5 @@
-#!/bin/sh
-wget -O bootstrap.sh https://svn.eionet.europa.eu/repositories/Zope/trunk/www.eea.europa.eu/trunk/install.sh
+i#!/bin/sh
+curl -o "bootstrap.sh" -k https://raw.githubusercontent.com/eea/eea.plonebuildout.core/master/install.sh
 chmod u+x bootstrap.sh
 ./bootstrap.sh
+
